--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
 	<title>Example</title>
 	<link rel="stylesheet" href="lib/destyle.css">
 	<link rel="stylesheet" href="example.css">
-	<script src="../dist/index.js"></script>
+	<script src="../dist/index.min.js"></script>
 </head>
 <body>
 <h1>Example</h1>
